name: AFPlecture10
version: 2015.0
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: patrikj@chalmers.se
homepage: http://www.cse.chalmers.se/edu/course/afp/
synopsis: AFP course lecture 10
author: Patrik Jansson
data-dir: ""
 
library
  hs-source-dirs: src
  build-depends: base <5, mtl <2.2, containers <0.6, QuickCheck <2.8,
                 pretty <1.2, array <0.6

  exposed-modules: Sample, ParserTests, Compiler.Compiler,
      Compiler.Interpreter, Compiler.Properties, Compiler.Generators,
      Compiler.PropPretty, Compiler.PolyParser, Compiler.StackMap,
      Compiler.Parser, Compiler.Value, Compiler.Machine,
      Compiler.Syntax, Compiler.Pretty, Compiler.Main,
      Compiler.TypedGenerators, Compiler.Behaviour

test-suite test-compiler
    build-depends: AFPlecture10 -any, base <5, mtl <2.2,
                   containers <0.6, QuickCheck <2.8, pretty <1.2, array <0.6
    type: exitcode-stdio-1.0
    main-is: Compiler/Properties.hs
    buildable: True
    hs-source-dirs: src src/Compiler
