name:                AFPlecture11
version:             2015.0
synopsis:            AFP course lecture 11
-- description:         
homepage:            http://www.cse.chalmers.se/edu/course/afp/
license:             BSD3
license-file:        LICENSE
author:              Patrik Jansson
maintainer:          patrikj@chalmers.se
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Typed, Middle, Expr, Expr.Gen,
                       Parser, TheoryOfDatatypes, TheoryOfDatatypes2
  -- other-modules:       
  build-depends:       base < 5, QuickCheck < 2.8
  default-language:    Haskell2010
