name:                AFPlecture13
version:             2015.1
synopsis:            AFP course lecture 13
-- description:
homepage:            http://www.cse.chalmers.se/edu/course/afp/
license:             BSD3
license-file:        LICENSE
author:              Patrik Jansson
maintainer:          patrikj@chalmers.se
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     Add,
                       AssocTypes,
                       FunDeps,
                       Families,
                       Array, Array.ShowInstances, Array.Example, Array.EqInstances, Array.Properties
  -- other-modules:
  build-depends:       base < 5, QuickCheck < 2.9, AFPlecture11
  default-language: Haskell2010